Bundle extensions, models library, native libraries